# tiev2021

./: .gitignore  2019TiEV_data_flow.vsdx  2019TiEV_state_chart.vsdx  ControlCenterCommon.h  README.md
src/modules/ControlCenter/: .ESRControl.cpp.swp  .ESRControl.hpp.swp  ._EHBControl.hpp  CAN_Communication.cpp  CMakeLists.txt  ControlCenterCommon.h  EHBControl.cpp  EHBControl.hpp  ESRControl.cpp  ESRControl.hpp  ROEWECenterControl.cpp  ROEWECenterControl.h  RemoteControl.cpp  RemoteControl.hpp  can_init.sh  main.cpp  messageControl.cpp  messageControl.h  parameters.txt  pidController.cpp  pidController.h  sys_logger.cpp
src/modules/ControlCenterZLG/: CMakeLists.txt  ControlCenterCommon.h  EHBControl.cpp  EHBControl.hpp  ESRControl.cpp  ESRControl.hpp  ROEWECenterControl.cpp  RemoteControl.hpp  SerialPort.cpp  SerialPort.hpp  can_init.sh  change_device_authority.sh  main.cpp  messageControl.cpp  messageControl.h  parameters.txt  pidController.cpp  structCANCONTROLZLG.hpp  timestamp.h  zcmUnitTest.cpp  zcm_receiver.h  zlg_can.h
src/modules/Esr-tx2/: CMakeLists.txt
src/modules/Esr-tx2/include/: esr.h
src/modules/Esr-tx2/src/: esr.cpp
src/modules/IMU_Receiver_linux_zcm/: CMakeLists.txt  NComRxC.c  NComRxC.h  receiver.cpp  receiver.h  rtkutm.txt
src/modules/Lux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lux  lux_8.h  main.cpp
src/modules/MultiBeamLaser/: CMakeLists.txt  README.md  classifier1.mb  db.xml  param.json
src/modules/MultiBeamLaser/include/global/: global.h  grid.h  pose.h  transform.h  velocore.h
src/modules/MultiBeamLaser/include/perception/: applanix_history.h  box.h  data_association.hpp  kalman_multitracker.h  laser_segment.h  linear_kalman_filter.h  obstacle.h  obstacle_types.h  perception.h  perception_messages.h  perception_types.h  roadrunner.h  second_receiver.h  segment.h  tievlog.cpp  tievlog.h  tracked_obstacle.h  utils.h  velodyne_rings.h
src/modules/MultiBeamLaser/include/tiny/: hdl64parse.h
src/modules/MultiBeamLaser/src/global/: global.cpp  grid.cpp  pose.cpp  transform.cpp  veloconfig.cpp
src/modules/MultiBeamLaser/src/perception/: MultiBeamLaser.cpp  appl_history.cc  box.cc  data_association.cpp  integration.cc  kalman_multitracker.cpp  linear_kalman_filter.cpp  obstacle.cpp  second_receiver.cpp  segment.cpp  tracked_obstacle.cpp  utils.cc  velodyne.cc  velodyne_rings.cpp
src/modules/MultiBeamLaser/src/tiny/: tinystr.cpp
src/modules/Sick/: CMakeLists.txt  draw.py  main.cpp  noisy.txt  sick.h  test2.cpp
src/modules/Trajectory_Controller/: CMakeLists.txt
src/modules/Trajectory_Controller/include/: controller_tools.h  stanley_tracking.h  zcm_receiver.h
src/modules/Trajectory_Controller/src/: control_main.cpp  controller_tools.cpp  stanley_tracking.cpp  zcm_receiver.cpp
src/modules/Trajectory_Controller/test/: test.cpp  visual.cpp  visual.h
src/modules/deepVision/detectnet-pedestrian/: CMakeLists.txt  detectnet-console.cpp
src/modules/deepVision/detectnet-warning/: .detectnet-console.cpp.swp  CMakeLists.txt  detectnet-console.cpp
src/modules/gui/: .clang-format  CMakeLists.txt  camera.cpp  camera.h  const.h  coordinate_converter.cpp  coordinate_converter.h  main.cpp  math_util.h  message_manager.cpp  message_manager.h  point2d.h  pose.h  tiev_class.h  tiev_elements.cpp  tiev_elements.h  tvis.pro  tviswindow.cpp  tviswindow.h
src/modules/gui/gl/src/: glad.c
src/modules/gui/src/qt/: twindow.cpp  twindow.h
src/modules/objreceiver/: CMakeLists.txt  receiver.cpp  receiver.h
src/modules/planner/: .clang-format  CMakeLists.txt  README.md
src/modules/planner/decision/: CMakeLists.txt  back_tracking_state.cpp  decision.h  decision_event.h  decision_fsm.cpp  decision_view.cpp  foggy_driving_state.cpp  free_driving_state.cpp  global_replanning_state.cpp  intersection_state.cpp  lane_driving_state.cpp  normal_driving_state.cpp  parking_state.cpp  stop_state.cpp  tracking_state.cpp  uturn_state.cpp
src/modules/planner/decision_bk/: back_tracking_state.cpp  decision.cpp  decision_event.cpp  decision_fsm.cpp  decision_fsm.h  decision_state.cpp  decision_state.h  decision_test.cpp  decision_view.cpp  decision_view.h  free_driving_state.cpp  global_planning_state.cpp  map_free_state.cpp  parking_state.cpp  tinyfsm.hpp
src/modules/planner/doc/: 途灵状态机2020说明文档.md
src/modules/planner/hu/: CMakeCache.txt  Makefile  cmake_install.cmake
src/modules/planner/hu/common/: Makefile  cmake_install.cmake
src/modules/planner/hu/decision/: Makefile  cmake_install.cmake  libdecision.a.REMOVED.git-id
src/modules/planner/hu/message_manager/: Makefile  cmake_install.cmake  message_manager_test
src/modules/planner/hu/path_planner/: Makefile  cmake_install.cmake  path_planner_test
src/modules/planner/hu/planner_tools/: Makefile  cmake_install.cmake
src/modules/planner/hu/road_manager/: Makefile  cmake_install.cmake  road_manager_test
src/modules/planner/hu/speed_planner/: Makefile  cmake_install.cmake
src/modules/planner/hu/start_up/: Makefile  (+3 more)
src/modules/planner/message_manager/: CMakeLists.txt  message_manager.cpp  message_manager.h  message_manager_test.cpp
src/modules/planner/path_planner/: CMakeLists.txt  path_planner.cpp  path_planner.h  path_planner_test.cpp  path_planner_view.cpp  path_planner_view.h
src/modules/planner/planner_tools/: CMakeLists.txt  planner_tools.cpp
src/modules/planner/road_manager/: CMakeLists.txt  findPath  road_manager.cpp  road_manager.h  road_manager_test.cpp  test_global_planning.cpp
src/modules/planner/speed_planner/: CMakeLists.txt  CMakeLists.txt.back  speed_optimizer.cpp  speed_optimizer.h
src/modules/planner/src/: CMakeLists.txt  main.cpp
src/modules/planner/start_up/: CMakeLists.txt  main.cpp  osqp_solver_test.cpp  speed_test.cpp
src/modules/planner/visualization/: CMakeLists.txt  CMakeLists.txt.debug  visualization.cpp  visualization.h
src/modules/planner/visualization_zcm/: CMakeLists.txt  structVISUALIZATION.zcm  visCoefficient.hpp  visPriorityLane.hpp  visReferencePath.hpp  visSTBoundary.hpp  visText.hpp  visVISUALIZATION.hpp  visualization_msg.h
(+989 files in other folders)
