add_subdirectory(config)
add_subdirectory(time_lock)
add_subdirectory(time_counter)
add_subdirectory(smooth)
add_subdirectory(interpolator)
add_subdirectory(look_up_tables)
add_subdirectory(splines)
add_subdirectory(mutexs)
add_subdirectory(utils)

set(src planner_tools.cpp)
add_library(planner_tools ${src})
target_link_libraries(planner_tools config interpolator distance_table mutexs smooth time_counter time_lock utils)
